--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -1,13 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.jayesh123.abhiwyakti.Events">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Check"/>
+    <Button
+        android:id="@+id/button1"
+        android:onClick="button1"
+        android:layout_width="120dp"
+        android:text="DAY 1"
+        android:layout_height="48dp"
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="80dp"
+        />
+    <Button
+        android:id="@+id/button2"
+        android:onClick="button2"
+        android:text="DAY 2"
+        android:layout_width="120dp"
+        android:layout_height="48dp"
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="50dp"
+        />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/button3"
+        android:onClick="button3"
+        android:text="DAY 3"
+        android:layout_width="120dp"
+        android:layout_height="48dp"
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="50dp"
+        />
+
+</LinearLayout>
