--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -14,5 +14,11 @@
     tools:showIn="@layout/app_bar_main"
     tools:context="com.example.jayesh123.abhiwyakti.MainActivity">
 
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="300dp"
+        android:layout_height="185dp"
+        android:layout_marginLeft="25dp"
+     ></android.support.v4.view.ViewPager>
 
-</RelativeLayout>
+</LinearLayout>
