--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -18,13 +18,28 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="INTRO"
+            android:text="NAME"
             android:textSize="25dp"
+            android:textColor="#000000"
             android:textStyle="bold"
             android:textAlignment="center"
             android:layout_marginLeft="120dp"
             android:layout_marginBottom="30dp"/>
-        <EditText
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="INTRO"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:textAlignment="center"
+            android:layout_marginLeft="120dp"
+            android:layout_marginBottom="30dp"/>
+        <TextView
             android:id="@+id/intro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -34,6 +49,7 @@
             android:text="RULES"
             android:textSize="25dp"
             android:textStyle="bold"
+            android:textColor="#000000"
             android:textAlignment="center"
             android:layout_marginLeft="120dp"
             android:layout_marginBottom="30dp"/>
@@ -47,10 +63,11 @@
             android:text="STRUCTURE"
             android:textSize="25dp"
             android:textStyle="bold"
+            android:textColor="#000000"
             android:textAlignment="center"
             android:layout_marginLeft="100dp"
             android:layout_marginBottom="30dp"/>
-        <EditText
+        <TextView
             android:id="@+id/struct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -60,11 +77,12 @@
             android:text="CONTACT"
             android:textSize="25dp"
             android:textStyle="bold"
+            android:textColor="#000000"
             android:textAlignment="center"
             android:layout_marginLeft="110dp"
             android:layout_marginBottom="30dp"/>
-        <EditText
-            android:id="@+id/Contact"
+        <TextView
+            android:id="@+id/contact"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
