--- a/app/src/main/res/layout/activity_day3.xml
+++ b/app/src/main/res/layout/activity_day3.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    tools:context="com.example.jayesh123.abhiwyakti.Day3">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,13 +35,12 @@
 
 
                     <ImageButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/casestdo"
-                        android:layout_gravity="center"
-                        android:id="@+id/visits"
-                        android:layout_margin="5dp"
-                        />
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/ib11"
+                        android:onClick="ib11"
+                        android:background="@drawable/codengt"
+                        android:layout_margin="2dp" />
 
 
                 </LinearLayout>
@@ -54,13 +53,12 @@
                     android:weightSum="1">
 
                     <ImageButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/groupooo"
-                        android:layout_gravity="center"
-                        android:id="@+id/visits"
-                        android:layout_margin="5dp"
-                        />
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/ib12"
+                        android:onClick="ib12"
+                        android:background="@drawable/poster"
+                        android:layout_margin="2dp" />
 
                 </LinearLayout>
 
@@ -82,24 +80,16 @@
                     android:weightSum="1">
 
                     <ImageButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/multisimo"
-                        android:layout_gravity="center"
-                        android:id="@+id/visits"
-                        android:layout_margin="5dp"
-                        />
-
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/ib13"
+                        android:onClick="ib13"
+                        android:background="@drawable/multisimoo"
+                        android:layout_margin="2dp" />
 
                 </LinearLayout>
 
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:layout_weight="1">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -109,13 +99,40 @@
                     android:weightSum="1">
 
                     <ImageButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/ib14"
+                        android:onClick="ib14"
                         android:background="@drawable/matlabooooo"
-                        android:layout_gravity="center"
-                        android:id="@+id/visits"
-                        android:layout_margin="5dp"
-                         />
+                        android:layout_margin="2dp" />
+
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_weight="1">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_weight="1"
+                    android:weightSum="1">
+
+                    <ImageButton
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/ib15"
+                        android:onClick="ib15"
+                        android:background="@drawable/quizo"
+                        android:layout_margin="2dp" />
+
                 </LinearLayout>
 
 
@@ -128,19 +145,18 @@
                     android:weightSum="1">
 
                     <ImageButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/quizo"
-                        android:layout_gravity="center"
-                        android:id="@+id/visits"
-                        android:layout_margin="5dp"
-                        />
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/ib16"
+                        android:onClick="ib16"
+                        android:background="@drawable/valedic"
+                        android:layout_margin="2dp" />
+
 
                 </LinearLayout>
 
 
             </LinearLayout>
-
 
 
         </LinearLayout>
