--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -15,50 +15,50 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_weight="1"
+            android:layout_margin="0px"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <ImageButton
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="201dp"
                 android:id="@+id/button1"
                 android:onClick="button1"
-                android:src="@drawable/dayone"/>
+                android:src="@drawable/one"/>
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_weight="1"
+            android:layout_margin="0px"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <ImageButton
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="200dp"
                 android:id="@+id/button2"
                 android:onClick="button2"
-                android:src="@drawable/daytwo"/>
+                android:src="@drawable/two"/>
 
         </LinearLayout>
 
         <LinearLayout
+            android:layout_margin="0px"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <ImageButton
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="200dp"
                 android:id="@+id/button3"
                 android:onClick="button3"
-                android:src="@drawable/daythree"/>
+                android:src="@drawable/theee"/>
 
         </LinearLayout>
 
 
     </LinearLayout>
-
 
 
 </LinearLayout>
